# sjs_jobwatch

./: .gitignore  README.md  TESTING.md  legacy_state.json  pyproject.toml  subscriptions.json  subscriptions.json.example  test2.py  test_file
.github/workflows/: ci.yml
data/: subscriptions.json
scripts/: test_email_alerts.py
src/sjs_jobwatch/alerts/: email.py  subscriptions.py
src/sjs_jobwatch/alerts/templates/: alert_email.html
src/sjs_jobwatch/cli/: main.py
src/sjs_jobwatch/core/: config.py  diff.py  models.py
src/sjs_jobwatch/delivery/: __init__.py  email.py  factory.py  legacy.py  providers.py
src/sjs_jobwatch/delivery/templates/: alert_email.txt
src/sjs_jobwatch/ingestion/: scraper.py
src/sjs_jobwatch/scheduler/: __init__.py  clock.py  policy.py  runner.py
src/sjs_jobwatch/storage/: snapshots.py
src/sjs_sitewatch/: config.py  logging.py
src/sjs_sitewatch/alerts/: alert_email.html  delivery.py  dispatcher.py  email.py  filters.py  models.py  pipeline.py  renderer.py  runner.py  scorer.py  severity.py
src/sjs_sitewatch/alerts/sinks/: base.py  console.py  email.py
src/sjs_sitewatch/alerts/templates/: alert.html  alert_email.html  alert_email.txt  base.html  styles.css
src/sjs_sitewatch/cli/: alerts.py  cli.py  export.py  main.py  run.py
src/sjs_sitewatch/docs/: linux-daemon.md
src/sjs_sitewatch/domain/: diff.py  explain.py  job.py  snapshot.py  trends.py
src/sjs_sitewatch/ingestion/: browser.py  extract.py  normalize.py
src/sjs_sitewatch/reporting/: console.py  export.py
src/sjs_sitewatch/runtime/: runner.py  service.py
src/sjs_sitewatch/scheduling/: jobs.py  scheduler.py
src/sjs_sitewatch/storage/: export.py  filesystem.py
src/sjs_sitewatch/users/: models.py  store.py
tests/: conftest.py  test_alerts.py  test_code_quality.py  test_comprehensive.py  test_explain.py  test_scheduler_logging.py  test_scheduler_once.py  test_trends.py
tests/alerts/: conftest.py  test_alert_pipeline_integration.py  test_alerts.py  test_console_sink.py  test_dispatcher.py  test_dispatcher_filtering.py  test_email.py  test_email_sink.py  test_email_sink_integration.py  test_email_snapshots.py  test_filters.py  test_pipeline.py  test_renderer.py  test_scorer.py  test_severity.py  test_severity_with_trends.py
tests/alerts/snapshots/: email_modified_job.html
tests/cli/: test_cli_summary.py
tests/domain/: test_diff.py  test_trends.py  test_trends_multi_day.py
tests/helpers/: jobs.py
tests/integration/: test_alert_pipeline_console.py
tests/sinks/: test_email_sink.py  test_email_sink_dry_run.py
tests/users/: test_subscription_store.py
zzzz src_old/: cli.py  console.py  renderer.py
zzzz src_old/old old sjs_sitewatch/: alerts.py  alerts_email.py  changes.py  cli_tables.py  emailer.py  report.py  report_trends.py  sitewatch.py  snapshot.py  watch.py
zzzz src_old/old old sjs_sitewatch/ingestion/: capture.py
zzzz src_old/old old sjs_sitewatch/state/: models.py  store.py
