[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sjs-sitewatch"
version = "0.1.0"
description = "Job market monitoring and alerting CLI"
authors = ["Bonnie McConnell <bonniep.mcconnell@gmail.com>"]
readme = "README.md"
packages = [{ include = "sjs_sitewatch", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"
apscheduler = "^3.11.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"

[tool.poetry.scripts]
sjs-sitewatch = "sjs_sitewatch.cli.cli:main"
sjs-sitewatch-alerts = "sjs_sitewatch.cli.alerts:alerts"


[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
